# topas-pipeline

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  Makefile  MakefileShared  README.md  __init__.py  config.json  config_defaults.json  config_input_file.txt  config_minimal.json  dsrct_test_fc.ipynb  growing_cohort_runs.sh  growing_cohort_runs2.sh  pyproject.toml  requirements.txt  scratch  stats_comparisons_dr_filter copy.ipynb  test.ipynb
example/: METADATA_UCEC.xlsx  ReadMe.md  TOPASscores_POI_AS_250307.xlsx  cptac_annotation_subset.csv
test_things/: high_dr_filter_process copy.py  high_dr_filter_process.ipynb  test_robust_zscore.ipynb
tests/integration_tests/: compare_tables.py  test_clinical_tools.py  test_picked_group.py  test_simsi.py
tests/unit_tests/: test_TOPAS_annotation.py  test_TOPAS_kinase_scoring.py  test_TOPAS_protein_phosphorylation_scoring.py  test_TOPAS_scoring.py  test_TOPAS_scoring_functions.py  test_basket_scoring.py  test_clinical_annotation.py  test_clinical_process.py  test_clinical_tools.py  test_metrics.py  test_picked_group.py  test_preprocess.py  test_preprocess_tools.py  test_report.py  test_report_creation.py  test_scoring.py  test_simsi.py  test_utils.py  test_z_scoring.py
topas_pipeline/: TOPAS_annotation.py  TOPAS_kinase_scoring.py  TOPAS_protein_phosphorylation_scoring.py  TOPAS_psite_scoring.py  TOPAS_scoring.py  TOPAS_scoring_functions.py  __init__.py  __main__.py  basket_scoring.py  bridge_normalization.py  clinical_annotation.py  clinical_process.py  clinical_tools.py  config.py  data_types.py  expression_correction.py  identification_metadata.py  main.py  meta_input_file.py  metrics.py  normalization.py  phospho_grouping.py  picked_group.py  portal_updater.py  preprocess.py  preprocess_tools.py  report_creation.py  sample_annotation.py  sample_metadata.py  simsi.py  utils.py  z_scoring.py
topas_pipeline/annotation/: phosphosite.py  proteins_of_interest.py
topas_pipeline/data_loaders/: data_loader.py  lfq_loader.py  simsi_tmt_loader.py  tmt_loader.py
topas_pipeline/preprocess/: bridge_normalization.py  phospho_grouping.py  phosphopeptides.py  picked_group.py  preprocess.py  preprocess_tools.py  sample_mapping.py
topas_pipeline/search_qc/: maxquant_qc.py  maxquant_search_qc_plots.py
topas_pipeline/tools/: NGS_prep.py  create_ck_substrate_annotation_file.py  create_configs_file.py  create_sample_annotation.py  oncoKB.py  onkoKB.py  replace_na_allpeptides_scannumbers.py  subset_psp.ipynb  topas_ref_channel.py
topas_pipeline/topas/: annotation.py  ck_substrate_phosphorylation.py  cytoplasmic_kinase_scoring.py  expression_correction.py  (+6 more)
(+11 files in other folders)
