[tool.poetry]
name = "wp3_sample_pipeline"
version = "0.1.0"
description = ""
authors = ["Cecilia Jensen <cecilia.jensen@tum.de>", "Matthew The <matthew.the@tum.de>", "Firas Hamood <firas.hamood@tum.de>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = ">=1.4.2"
numpy = "^1.22.3"
seaborn = ">=0.13.2"
scipy = "^1.8.0"
matplotlib = "^3.5.2"
openpyxl = "^3.1.2"
networkx = "^2.8"
XlsxWriter = "^3.0.3"
toml = ">=0.10.2"
pytest-cov = "^3.0.0"
ppca = "^0.0.4"
requests = "^2.28.1"
umap-learn = "^0.5.3"
llvmlite = "^0.39.1"
scikit-learn = "^1.3.0"
picked-group-fdr = ">=0.6.2"
simsi-transfer = ">=0.6.0"
job-pool = ">=0.2.6"
psite-annotation = ">=0.5.0"
triqler = ">=0.7.3"
statsmodels = "^0.14.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.24.0"
pytest-mock = "^3.14.0"
squarify = "^0.4.4"

[tool.coverage.run]
omit = [
    "bin/TOPAS_drug_scoring.py",
    "bin/TOPAS_pathway_scoring.py",
    "bin/entity_scoring.py",
    "bin/heatmap_generator.py",
    "bin/oncoKB_annotations.py",
    "bin/Oncostar_genomics_alteration.py",
    "bin/pca_plotting.py",
    "bin/to_cytoscape.py",
]

[build-system]
requires = ["poetry-core>=1.5.1"]
build-backend = "poetry.core.masonry.api"
